--- a/plugin.xml
+++ b/plugin.xml
@@ -81,6 +81,17 @@
 
     <config-file target="AndroidManifest.xml" parent="/*">
       <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+      <queries>
+        <intent>
+          <action android:name="android.intent.action.SENDTO" />
+          <data android:scheme="mailto" />
+        </intent>
+        <package android:name="com.whatsapp" />
+        <package android:name="com.whatsapp.w4b" />
+        <package android:name="com.twitter.android" />
+        <package android:name="com.facebook.orca" />
+        <package android:name="com.facebook.katana" />
+      </queries>    
     </config-file>
 
     <config-file target="AndroidManifest.xml" parent="/manifest/application">
